<resources>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="item_count_template">Item count: %1$d</string>
    <string name="add_gratitude_list_fab_content">Add New Gratitude List</string>
    <string name="delete_gratitude_item">Delete gratitude item</string>
    <string name="title_gratitude">Gratitude</string>
    <string name="new_gratitude_item_hint">What are you grateful for today?</string>
    <string name="save_button_text">Save</string>
    <string name="delete_button_text">Delete</string>
    <string name="clear_button_text">Clear</string>
    <string name="gratitude_list_image">Gratitude list image</string>
    <string name="title_journal">Journal</string>
    <string name="journal_entry_hint">Keep a diary and someday it will keep you...</string>
    <string name="journal_list_image">Image of a journal</string>
    <string name="add_journal_entry_fab_content_description">Add a new journal entry</string>
    <string name="login_prompt">Please login below</string>
    <string name="login_btn">Login</string>
    <string name="logout">Logout</string>
    <string name="logout_txt">Logout</string>
    <string name="settings">Settings</string>
    <string name="please_login">Please Login</string>
    <string name="settings_enable_reminders">Enable reminder notifications</string>
    <string name="last_day_opened_preference_key">LAST_DAY_APP_OPENED</string>
    <string name="app_opened_counter_preference_key">APP_OPENS_PREF_KEY</string>
    <string name="periodic_reminder">Time to do your actions!</string>
    <string name="periodic_reminder_title">Sossego: time to do your actions!</string>
    <string name="snooze">Snooze</string>
    <string name="periodic_reminder_channel_id">sossego_reminder_channel</string>
    <string name="channel_description">Sossego action reminders</string>
    <string name="periodic_reminder_channel_name">"Sossego action reminders "</string>
    <string name="reminders_enabled">REMINDERS_ENABLED</string>
    <string name="reminder_hour">REMINDER_HOUR</string>
    <string name="reminder_minute">REMINDER_MINUTE</string>
    <string name="reminders_minute_text">Reminders minute</string>
    <string name="periodic_reminder_body">A small amount of time each day can make a world of difference</string>
    <string name="notification_hour_name">Notification Reminder Time</string>
    <string name="notification_hour_description">%s. The time at which the daily actions reminder will be sent to you (if enabled). </string>
    <string name="title_meditation">Meditation</string>
    <string name="mediation_prompt">Choose a time</string>
    <string name="play_pause_button_content_description">Play-pause button</string>
    <string name="water_waves_background_image">Water waves background image</string>
    <string name="play_or_pause_the_timer">play or pause the timer</string>
    <string name="water_droplet">Water droplet</string>
    <string name="app_name">Sossego</string>
    <string name="app_splashscreen_logo">App Splashscreen Logo</string>
</resources>