<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_gratitude">

    <fragment
        android:id="@+id/navigation_gratitude"
        android:name="com.example.android.sossego.ui.home.listing.GratitudeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_gratitude" >
        <action
            android:id="@+id/action_navigation_home_to_gratitudeDetailFragment"
            app:destination="@id/gratitudeDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:popEnterAnim="@anim/slide_in_right"
            />
    </fragment>
    <fragment
        android:id="@+id/gratitudeDetailFragment"
        android:name="com.example.android.sossego.ui.home.detail.GratitudeDetailFragment"
        android:label="GratitudeDetailFragment">
        <argument
            android:name="gratitudeListIdKey"
            app:argType="long" />
        <action
            android:id="@+id/action_navigation_gratitudeDetailFragment_to_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="false"
            app:popUpTo="@+id/navigation_home"
            app:popUpToInclusive="true"
            />
    </fragment>



    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.android.sossego.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.android.sossego.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

</navigation>